# klh

./: .gitignore  .notes  Cargo.toml  README.md  project.org  test.txt
.github/workflows/: ci.yaml
klh_core/: Cargo.toml  README.md
klh_core/src/: config.rs  dispatch.rs  event.rs  klh.rs  lib.rs  plugin.rs  session.rs
klh_core/src/event/: command.rs  event_message.rs  event_type.rs  mod.rs  query.rs
klh_core/src/messaging/: README.md  message.rs  message_content.rs  message_error.rs  message_type.rs  mod.rs  request.rs  response.rs
klh_core/src/plugin/: README.md  mod.rs  plugin.rs  plugin_channel.rs  plugin_registrar.rs
klh_core/src/plugins/: README.md  diagnostics.rs  mod.rs
klh_core/src/plugins/buffers/: mod.rs  models.rs  requests.rs
klh_core/src/plugins/diagnostics/: mod.rs  models.rs  requests.rs
klh_core/src/plugins/display/: mod.rs
klh_core/src/session/: README.md  dispatch.rs  mod.rs  session.rs  session_client.rs
klh_core/tests/: klh_integration_tests.rs
klh_test_client/: Cargo.toml
klh_test_client/src/: main.rs
src/: buffer.rs  buffer_provider.rs  buffer_store.rs  command_executor.rs  display.rs  input_handler.rs  lib.rs  main.rs  models.rs  session.rs  startup.rs  ui.rs
src/buffer/: buffer.rs  buffer_provider.rs  buffer_store.rs
src/session/: session.rs  session_state.rs
