[package]
name = "klh"
version = "0.1.0"
authors = ["Kyle Barton <kjbarton4@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
termion = "1.5"
termios = "*"
libc = "*"
log = "*"
simplelog = "*"
iced = "*"
iced_native = "*"
iced_graphics = "*"
iced_futures = "*"
crossbeam-channel = "*"